# polymarket_prediction_accuracy

./: LICENSE  README.md  pyproject.toml
scr/data/: tags_list.csv
scr/data_handler/: csv_handler.py  poly_data_handler.py  subgraph_data_handler.py
scr/notebooks/: general_testing.ipynb
scr/poly_prob_model/: compute_poly_prob_accuracy.py
scr/utils/: parameters.py  poly_utils.py
workflows/: computing_avg_prob.py
